2016-01-08 Added graduated score to Ordering module
2016-01-08 Added select and deselect commands in Line Selection module
2016-01-07 Fixed issue with Video on Chrome
2016-01-07 Added isAllOK command to Fractions module
2016-01-07 Added isAllOK command to Graph module
2016-01-05 Fixed problem with MathJax in Table module
2016-01-05 Added horizontal layout property to Choice module
2015-12-23 Fixed problem with reseting visibility in Text Selection module
2015-12-21 Added image modes in Memo Game module
2015-12-18 Fixed problem with stopping audio on mLibro in Audio module
2015-12-17 Fixed error messages in Standard Shapes module
2015-12-16 Fixed tests in Shape Tracing
2015-12-16 Added displaying coordinates in editor in BoardGame, PointsLine, LineSelection, FigureDrawing and ConnectingDots modules
2015-12-15 Fixed issue with slow drawing in Shape Tracing
2015-12-15 Fixed issue with rulers in editor
2015-12-15 Fixed problem withs Show Answers mode in TrueFalse module
2015-12-11 Added show and hide commands in Connection and TrueFalse modules
2015-12-10 Added optional parameter to isOrderCorrect function in Shape Tracing module
2015-12-10 Fixed setting item after reset and changing page in MultiAudio module
2015-12-09 Fixed issue with detecting boundaries is Shape Tracing
2015-12-09 Added new property Value type in Text module
2015-12-08 Added Time measurement feature to Player
2015-12-08 Added rulers handling
2015-12-08 Fixed issue with draggable gaps with LaTeX in Text module
2015-12-04 Added Is not activity and Enable more digits in gap properties in Writing Calculations module
2015-12-03 Fixed issue with Limited Check and Check in Basic Math Gaps module
2015-12-02 Added possibility of displaying page from commons
2015-12-01 Added math gaps in Table module
2015-11-30 Added ShowAnswers to Plot module
2015-11-27 Fixed issue with editor height in Paragraph module
2015-11-25 Added displaying coordinates in editor in Coloring and Shape Tracing modules